--- a/documentation/source/usersGuide/usersGuide_16_tinyNotation.ipynb
+++ b/documentation/source/usersGuide/usersGuide_16_tinyNotation.ipynb
@@ -2,14 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# User's Guide, Chapter 16: TinyNotation"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "So far in this User's Guide, we've been loading music into `music21` either with one of the `corpus.parse` or `converter.parse` methods, which is great if you already have a piece of music in the corpus or in a file somewhere, or by building up a score note by note using the `stream.Stream()` and `note.Note()` objects.\n",
     "\n",
@@ -25,7 +33,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -51,7 +63,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Notice that the last \"c\" is lowercase, while the rest of the notes are uppercase.  Case determines octave: \"C\" = the c in bass clef (C3) while \"c\" = middle C (C4).  Here are some other octaves:"
    ]
@@ -59,7 +75,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -85,7 +105,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -110,7 +134,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "And, yes, CCC is the C below CC, and c''' is the c above c''.  Remember when you use higher notes to make sure to enclose your string in double quotes, not single quotes.\n",
     "\n",
@@ -120,7 +148,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -145,7 +177,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Periods signify dots, \"r\" is for a rest, and \"~\" indicates a tie:"
    ]
@@ -153,7 +189,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -178,7 +218,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Sharps, flats, and, if desired for clarity, naturals are indicated with `#`, `-` (not `b`) and, `n`, respectively:"
    ]
@@ -186,7 +230,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -211,7 +259,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "A lyric syllable is specified by appending it after the note with an underscore:"
    ]
@@ -219,7 +271,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -244,7 +300,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "And, finally, triplets are possible by enclosing the triplet notes in curly brackets along with a special `trip` prefix:"
    ]
@@ -252,7 +312,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -277,7 +341,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Okay -- so what if you want to do something more complex?  Apply an id to a note with the \"=\" tag, and then make changes to it using music21:"
    ]
@@ -285,7 +353,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -315,7 +387,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "And that's how I use TinyNotation, about 90% of the time.  But when I need to, I can make something more complex..."
@@ -323,7 +398,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Expanding TinyNotation through new Tokens, Modifiers, and States\n",
     "\n",
@@ -337,7 +416,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "tnc = tinyNotation.Converter('6/8 e4. d8 c# d e2.')"
@@ -345,7 +428,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "We run the converter by calling `.parse()` on it and then there will be a `Stream` (generally a `stream.Part` object) in the `.stream` attribute of the `Converter`."
    ]
@@ -353,7 +440,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -379,7 +470,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Now that we have a basic idea of how we can get a converter, we can start hacking it. \n",
     "\n",
@@ -391,7 +486,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "class KeyToken(tinyNotation.Token):\n",
@@ -402,7 +501,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "The `KeyToken` is a subclass of the `tinyNotation.Token` class.  When it is parsed, `.parse()` is called and it is passed a reference to the `Converter` object, and important information is stored in the `self.token` attribute.  The Converter calling `parse()` expects that a :class:`~music21.base.Music21Object` or `None` will be returned.  Here we're going to return a :class:`~music21.key.Key` object.\n",
     "\n",
@@ -412,7 +515,11 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "tnc = tinyNotation.Converter()\n",
@@ -422,7 +529,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Next, let's create a fragment of TinyNotation to see if this works, using the `load()` method:"
    ]
@@ -430,7 +541,11 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -457,7 +572,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Modifying the behavior of existing tokens\n",
     "\n",
@@ -467,7 +586,11 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "class ColorModifier(tinyNotation.Modifier):\n",
@@ -478,7 +601,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Now we'll modify our `Converter` object to make it so that the ColorModifier is run anytime that a color name is put in angle brackets after a Token, and then test it on a simple stream."
    ]
@@ -486,7 +613,11 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -513,7 +644,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "There are six modifiers that can be used.  We've seen the `=data` (`modifierEquals`) and `_data` (`modifierUnderscore`) modifiers already, which don't take a closing tag, and we can add to them the `<data>` (`modifierAngle`) tag we just demonstrated, along with `*data*` (`modifierStar`), `[data]` (`modifierSquare`) and `(data)` (`modifierParens`) tags, which have a meaning ready for you to create.\n",
     "\n",
@@ -523,7 +658,11 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -553,7 +692,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "If we leave in the bass note and instead add the ChordSymbol to the stream, then we'll be able to see it on the score:"
    ]
@@ -561,7 +704,11 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -583,7 +730,7 @@
     "class HarmonyModifier(tinyNotation.Modifier):\n",
     "    def postParse(self, n):\n",
     "        cs = harmony.ChordSymbol(n.pitch.name + self.modifierData)\n",
-    "        self.parent().stream.append(cs)\n",
+    "        self.parent.stream.append(cs)\n",
     "        return n\n",
     "    \n",
     "tnc.modifierUnderscore = HarmonyModifier\n",
@@ -593,7 +740,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Defining a State for a set of tokens\n",
     "\n",
@@ -604,7 +755,10 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -616,14 +770,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Every State token has the following methods called: `start()`, which is called when the state is begun, `affectTokenBeforeParse(tokenStr)` which gives the `State` object the opportunity to change the string representation of the token before it is parsed, `affectTokenAfterParseBeforeModifier(music21object)` which lets the music21 object be changed before the modifiers are applied, `affectTokenAfterParse(music21object)` which lets the state change the music21 object after all modifiers are applied, and `end()` which lets any object in the `.affectedToken` list be changed after it has been appended to the Stream.  Often `end()` is all you will need to set."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Now we'll define `\"nostem\"` to be the start of a stemless state.  We do this by adding the term \"nostem\" to the `bracketStateMapping` dictionary on TinyNotationConverter."
    ]
@@ -631,7 +793,11 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -657,7 +823,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Okay, that's a good amount of fun and games, but here's what some people really want: using State to create chords.  To do this, we will prevent notes from being added to the stream as they are parsed, and then put a Chord into the stream at the end:"
    ]
@@ -665,7 +835,11 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -704,10 +878,13 @@
    "metadata": {
     "sphinx_links": {
      "any": true
+    },
+    "pycharm": {
+     "name": "#%% md\n"
     }
    },
    "source": [
-    "That's a long enough chapter on a tiny enough concept.  We'll move on to how Streams and other objects are related to their prior incarnations though :ref:`Chapter 17, Derivations <usersGuide_17_derivations>`."
+    "That's a long enough chapter on a tiny enough concept.  We'll move on to how Streams and other objects are related to their prior incarnations though :ref:`Chapter 17, Derivations <usersGuide_17_derivations>`.\n"
    ]
   }
  ],
