Remove `forceSource=True` from user's guide examples

--- a/documentation/source/usersGuide/usersGuide_33_expressions.ipynb
+++ b/documentation/source/usersGuide/usersGuide_33_expressions.ipynb
@@ -52,7 +52,7 @@
     }
    ],
    "source": [
-    "cpe = corpus.parse('cpebach/h186', forceSource=True)\n",
+    "cpe = corpus.parse('cpebach/h186')\n",
     "cpeExcerpt = cpe.measures(1,2) \n",
     "cpeExcerpt.show()"
    ]
