--- a/documentation/source/usersGuide/usersGuide_43_searching1.ipynb
+++ b/documentation/source/usersGuide/usersGuide_43_searching1.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "from music21 import *\n",
-    "lamb1 = corpus.parse('palestrina/agnus_I_01', forceSource=True)"
+    "lamb1 = corpus.parse('palestrina/agnus_I_01')"
    ]
   },
   {
