--- a/documentation/source/developerReference/startingOver.ipynb
+++ b/documentation/source/developerReference/startingOver.ipynb
@@ -25,7 +25,9 @@
     "\n",
     "6. Keep the core of the toolkit small and encourage an ecosystem of other add-ons.\n",
     "\n",
-    "7. Don't try to encode every exception to standard music that your musicologist brain can conceive of.  Put those in the `.editorial` or other special purpose attribute.  \n",
+    "7. Don't try to encode every exception to standard music that your musicologist brain can conceive of.  Put those in the `.editorial` or other special purpose attribute.\n",
+    "\n",
+    "8. Make every pitch have an accidental.  The difference between Accidental('natural') and None has raised more problems than its worth. (added June 2023)\n",
     "\n",
     "There will be more here as I think of it.  -- Michael Scott Asato Cuthbert, 2022 October."
    ]
@@ -47,7 +49,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
