Refactor out MuseScore/Jupyter code
Refactor out Jupyter code to the ipython21 directory

Refactor out MuseScore code to converter/museScore

Make subConverter consistently have a capital C (backwards incompatible)

--- a/documentation/source/developerReference/devTest_widgets.ipynb
+++ b/documentation/source/developerReference/devTest_widgets.ipynb
@@ -524,7 +524,7 @@
     }
    ],
    "source": [
-    "converter.subConverters.ConverterMusicXML.findNumberedPNGPath(t)"
+    "converter.museScore.findNumberedPNGPath(t)"
    ]
   },
   {
