--- a/documentation/source/usersGuide/usersGuide_08_installingMusicXML.ipynb
+++ b/documentation/source/usersGuide/usersGuide_08_installingMusicXML.ipynb
@@ -257,7 +257,7 @@
     }
    ],
    "source": [
-    "converter.Converter().subconvertersList('input')"
+    "converter.Converter().subConvertersList('input')"
    ]
   },
   {
@@ -293,7 +293,7 @@
     }
    ],
    "source": [
-    "converter.Converter().subconvertersList('output')"
+    "converter.Converter().subConvertersList('output')"
    ]
   },
   {
