--- a/documentation/source/usersGuide/usersGuide_54_extendingConverter.ipynb
+++ b/documentation/source/usersGuide/usersGuide_54_extendingConverter.ipynb
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we tell the converter module that our subconverter exists and can handle 'singlebeat'/'singleBeat'/'.sb' files. "
+    "Next we tell the converter module that our subConverter exists and can handle 'singlebeat'/'singleBeat'/'.sb' files. "
    ]
   },
   {
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "converter.registerSubconverter(SingleBeat)"
+    "converter.registerSubConverter(SingleBeat)"
    ]
   },
   {
@@ -286,7 +286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can cleanup what we've done (always be a good citizen) by calling `converter.resetSubconverters`."
+    "We can cleanup what we've done (always be a good citizen) by calling `converter.resetSubConverters`."
    ]
   },
   {
@@ -295,7 +295,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "converter.resetSubconverters()"
+    "converter.resetSubConverters()"
    ]
   },
   {
