--- a/documentation/source/usersGuide/usersGuide_02_notes.ipynb
+++ b/documentation/source/usersGuide/usersGuide_02_notes.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -123,29 +123,12 @@
        " 'NoteException',\n",
        " 'Rest',\n",
        " 'SYLLABIC_CHOICES',\n",
-       " 'StepName',\n",
        " 'Unpitched',\n",
-       " 'annotations',\n",
-       " 'base',\n",
-       " 'beam',\n",
-       " 'common',\n",
-       " 'duration',\n",
-       " 'environLocal',\n",
-       " 'environment',\n",
-       " 'exceptions21',\n",
-       " 'expressions',\n",
-       " 'interval',\n",
        " 'noteheadTypeNames',\n",
-       " 'overload',\n",
-       " 'pitch',\n",
-       " 'prebase',\n",
-       " 'stemDirectionNames',\n",
-       " 'style',\n",
-       " 'tie',\n",
-       " 'volume']"
+       " 'stemDirectionNames']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1493,7 +1476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
